# fixlator

./: .gitignore  CMakeLists.txt  Makefile  README.md  fixlator.sln
fixlator/: FLApp.cpp  FLApp.h  FLMain.cpp  FLMain.h  ParserEngine.cpp  ParserEngine.h  Printer.cpp  fixlator.vcxproj  fixlator.vcxproj.filters
inc/: FLMain.h  ParserEngine.h  ResultsListCtrl.h
src/: CMakeLists.txt  ClearCurrentMsgsDialog.cpp  ClearCurrentMsgsDialog.h  FLApp.cpp  FLApp.h  FLMain.cpp  FLMain.h  ParserEngine.cpp  ParserEngine.h  Printer.h  RawDataHandler.cpp  RawDataHandler.h  ResultsListCtrl.cpp  ResultsListCtrl.h  UserData.cpp  UserData.h  UserSettings.cpp  UserSettings.h  tempCodeRunnerFile.cpp
src/base/: CMakeLists.txt  Controller.cpp  Controller.h  Printer.cpp  Printer.h  UserData.cpp  UserData.h
src/cli/: CMakeLists.txt  FLMain.cpp  FL_CLI_Main.cpp  requirements.txt
src/gui/: CMakeLists.txt  Controller.h  FLApp.cpp  FLApp.h  FLMain.cpp  FLMain.h  ResultsListCtrl.cpp  ResultsListCtrl.h  UserSettings.cpp  UserSettings.h  fixlator.ini
test/base/: CMakeLists.txt  TestUserData.cpp
test/data/: complete_fix_msg.txt  incomplete_fix_msg.txt
